feat: v0.4.4 updates
