# generated/apidocs.swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Permify API",
     "description": "Permify is an open-source authorization service for creating and maintaining fine-grained authorizations across your individual applications and services. Permify converts authorization data as relational tuples into a database you point at. We called that database a Write Database (WriteDB) and it behaves as a centralized data source for your authorization system. You can model of your authorization with Permify's DSL - Permify Schema - and perform access checks with a single API call anywhere on your stack. Access decisions made according to stored relational tuples.",
-    "version": "v0.4.3",
+    "version": "v0.4.4",
     "contact": {
       "name": "API Support",
       "url": "https://github.com/Permify/permify/issues",
@@ -17,6 +17,9 @@
   "tags": [
     {
       "name": "Permission"
+    },
+    {
+      "name": "Watch"
     },
     {
       "name": "Schema"
@@ -650,6 +653,59 @@
           "Schema"
         ]
       }
+    },
+    "/v1/tenants/{tenant_id}/watch": {
+      "post": {
+        "operationId": "watch.watch",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/v1WatchResponse"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of v1WatchResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "tenant_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "snap_token": {
+                  "type": "string"
+                }
+              },
+              "title": "WatchRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Watch"
+        ]
+      }
     }
   },
   "definitions": {
@@ -1251,6 +1307,42 @@
       },
       "title": "Tuple"
     },
+    "v1TupleChange": {
+      "type": "object",
+      "properties": {
+        "operation": {
+          "$ref": "#/definitions/v1TupleChangeOperation"
+        },
+        "tuple": {
+          "$ref": "#/definitions/v1Tuple"
+        }
+      },
+      "title": "TupleChange"
+    },
+    "v1TupleChangeOperation": {
+      "type": "string",
+      "enum": [
+        "OPERATION_UNSPECIFIED",
+        "OPERATION_CREATE",
+        "OPERATION_DELETE"
+      ],
+      "default": "OPERATION_UNSPECIFIED"
+    },
+    "v1TupleChanges": {
+      "type": "object",
+      "properties": {
+        "snap_token": {
+          "type": "string"
+        },
+        "tuple_changes": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1TupleChange"
+          }
+        }
+      },
+      "title": "TupleChanges"
+    },
     "v1TupleFilter": {
       "type": "object",
       "properties": {
@@ -1286,6 +1378,15 @@
         }
       },
       "title": "TupleToUserSet"
+    },
+    "v1WatchResponse": {
+      "type": "object",
+      "properties": {
+        "changes": {
+          "$ref": "#/definitions/v1TupleChanges"
+        }
+      },
+      "title": "WatchResponse"
     }
   },
   "securityDefinitions": {
